Fix whitespace in action script examples

--- a/site/assets/css/site.css
+++ b/site/assets/css/site.css
@@ -70,6 +70,7 @@ pre > code {
   display: block;
   padding: .75rem 1rem;
   margin: 0;
+  white-space: pre-wrap;
 }
 
 a {
